# dapr-portal-cli

./: .gitignore  AGENTS.md  BOOT.md  LICENSE  README.md  pyproject.toml
.cursor/skills/: README.md
.github/workflows/: ci.yml
dapr_portal/: __init__.py  __main__.py  address_gist_report.py  address_scan.py  candidates.py  cli.py  dapr_tables.py  dc_screen.py  industrial_geometry.py  portal.py  report.py  scout.py  vic_admin.py  vic_planning_overlays.py  vic_spatial.py  vic_tiling.py  vicmap_address.py  vicmap_address_bulk.py  vicmap_property.py
dapr_portal/data/: __init__.py  vic_lga_codes.csv
dapr_portal/docs/: dc_screening.md  transmission_data_sources.md  vic_address_scan.md
examples/: vic_candidates.csv
skills/dapr-portal/: SKILL.md
tests/: test_address_gist_report.py  test_address_scan.py  test_dapr_tables.py  test_dc_screen.py  test_industrial_tag.py  test_portal_rosetta_layers.py  test_report.py  test_vic_admin.py  test_vic_planning_overlays.py  test_vic_spatial.py  test_vic_tiling.py  test_vicmap_address.py  test_vicmap_address_bulk.py  test_vicmap_property.py
tests/fixtures/: report_screen_like.json  sample_feature_collection.json
