[project]
name = "dapr-portal-cli"
version = "0.1.0"
description = "Scriptable access to CitiPower/Powercor DAPR portal tabular and static assets"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=42.0.0",
    "httpx>=0.27.0",
    "polyline>=2.0.4",
    "pyproj>=3.7.1",
    "shapely>=2.1.2",
]

[project.scripts]
dapr = "dapr_portal.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dapr_portal"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
